# devils_engine

./: .clang-format  .clang-format-ignore  .editorconfig  .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  CODE_STYLE.md  LICENSE  README.md  ROADMAP.md  main.cpp
libs/act/: CMakeLists.txt  README.md
libs/act/src/act/: function.cpp  registry.cpp  script_resource.cpp
libs/acumen/: CMakeLists.txt  README.md
libs/acumen/src/acumen/: cache.cpp  goap_resource.cpp  registry.cpp  system.cpp
libs/aesthetics/: CMakeLists.txt  README.md
libs/aesthetics/src/aesthetics/: serialization.cpp  sink.cpp  world.cpp
libs/bindings/: CMakeLists.txt
libs/bindings/src/bindings/: env.cpp  nuklear_bindings.cpp
libs/catalogue/: CMakeLists.txt  README.md
libs/catalogue/src/catalogue/: core.cpp  demo.cpp  introspection.cpp  logging.cpp  registry.cpp
libs/demiurg/: CMakeLists.txt  README.md
libs/demiurg/src/demiurg/: catalogue_domain.cpp  folder_module.cpp  module_system.cpp  modules_listing.cpp  resource_loader.cpp  resource_manifest.cpp  resource_system.cpp  zip_module.cpp
libs/flow/: CMakeLists.txt  README.md  system.h
libs/flow/src/flow/: animation_resource.cpp  system.cpp
libs/input/: CMakeLists.txt  README.md
libs/input/src/input/: bindings.cpp  core.cpp  events.cpp  key_names.cpp
libs/mood/: CMakeLists.txt  README.md
libs/mood/src/mood/: fsm_resource.cpp  registry.cpp  runtime.cpp  system.cpp
libs/options/: CMakeLists.txt  README.md
libs/painter/: CMakeLists.txt  README.md
libs/painter/src/painter/: arbitrary_image_container.cpp  assets_base.cpp  attachments_container.cpp  auxiliary.cpp  buffer_resources.cpp  common.cpp  common_stages.cpp  common_steps.cpp  container.cpp  execution_pass.cpp  framebuffer_resources.cpp  glsl_source_file.cpp  gpu_texture_resource.cpp  graphics_base.cpp  hierarchical_image_container.cpp  image_pool.cpp  layouting.cpp  makers.cpp  mesh_resource.cpp  pipeline_cache_resource.cpp  pipelines_config_static_container.cpp  pipelines_resources.cpp  queue.cpp  queue_stages.cpp  render_config_source.cpp  render_pass_resources.cpp  render_pass_stages.cpp  shader_crafter.cpp  shader_source_file.cpp  stb_image_impl.cpp  structures.cpp  swapchain_resources.cpp  system.cpp  system_info.cpp  texture_resource.cpp  vulkan_header.cpp
libs/prefab/: CMakeLists.txt
libs/prefab/src/prefab/: resource.cpp
libs/resolve/: CMakeLists.txt  README.md
libs/simul/: CMakeLists.txt  README.md
libs/simul/src/simul/: interface.cpp  lua_script_resource.cpp  runtime.cpp  startup_resources.cpp
libs/sound/: CMakeLists.txt  README.md
libs/sound/src/sound/: al_helper.cpp  basic_sources.cpp  decoder.cpp  flac_decoder.cpp  mp3_decoder.cpp  ogg_decoder.cpp  opus_decoder.cpp  pcm_decoder.cpp  resource.cpp  sound_resource.cpp  system.cpp  wav_decoder.cpp
libs/thread/: CMakeLists.txt
libs/thread/src/thread/: atomic_pool.cpp  pool.cpp  stack_pool.cpp
libs/utils/: CMakeLists.txt  README.md
libs/visage/: CMakeLists.txt  README.md
subprojects/cardgame/: CMakeLists.txt  README.md  action_pipeline_test.cpp  combat_script_test.cpp  effect_program_test.cpp  execution_report_script_test.cpp  follow_up_test.cpp  headless_smoke.cpp  script_test_fixture.h  typed_effect_test.cpp
subprojects/cardgame/src/: combat.cpp  combat_script.cpp  effect_program.cpp  follow_up.cpp
subprojects/tests/: CMakeLists.txt  act_building_blocks_test.cpp  act_call_context_test.cpp  act_packer_test.cpp  acumen_script_test.cpp  acumen_test.cpp  aesthetics_collect_buffer_test.cpp  aesthetics_elect_buffer_test.cpp  aesthetics_flag_set_test.cpp  aesthetics_interaction_arena_test.cpp  aesthetics_message_buffer_test.cpp  aesthetics_pipeline_test.cpp  aesthetics_serialization_benchmark.cpp  aesthetics_serialization_test.cpp  aesthetics_world_benchmark.cpp  aesthetics_world_test.cpp  catalogue_call_log_test.cpp  catalogue_deferred_test.cpp  catalogue_introspection_test.cpp  demiurg_resource_loader_test.cpp  flow_test.cpp  fsm_config_test.cpp  goap_config_test.cpp  input_bindings_test.cpp  painter_asset_lifetime_test.cpp  painter_queue_plan_test.cpp  painter_shader_prepare_test.cpp  prefab_test.cpp  resolve_pipeline_test.cpp  script_vs_native_benchmark.cpp  simul_lifecycle_test.cpp  simul_settings_files_test.cpp  sound_system_test.cpp  spawn_script_test.cpp  stats_script_test.cpp  thread_general_test.cpp  tile_frontier_config_test.cpp  timeline_test.cpp  turn_pipeline_test.cpp  utils_contract_test.cpp  (+1 more)
subprojects/tests/shaders/: actor.frag.glsl  tile.vert.glsl  ui.frag.glsl  ui.vert.glsl
subprojects/tests/test_render_config/: declare_values.tavl
subprojects/tile_frontier/: CMakeLists.txt  config_effect_smoke.cpp  main.cpp  mt_benchmark.cpp  resume_smoke.cpp  snapshot_smoke.cpp  test_brain_fixture.cpp  test_brain_fixture.h
tests/: CMakeLists.txt  acumen_test.cpp  aesthetics_serialization_benchmark.cpp  aesthetics_world_benchmark.cpp  aesthetics_world_test.cpp  catalogue_introspection_test.cpp  demiurg_resource_loader_test.cpp  flow_test.cpp  painter_shader_prepare_test.cpp  thread_general_test.cpp  utils_contract_test.cpp  utils_general_test.cpp
tests/shaders/: actor.vert.glsl  fragment1.frag.glsl  tile.frag.glsl  ui.frag.glsl  ui.vert.glsl  vertex1.vert.glsl
tests/test_render_config/: declare_counters.json  declare_counters.tavl  declare_values.json  declare_values.tavl
tests/test_render_config/constants/: list.json  list.tavl
tests/test_render_config/descriptors/: globals.tavl  mask_textures.tavl  textures.tavl
tests/test_render_config/draw_groups/: list1.json  list1.tavl
tests/test_render_config/geometries/: g1.json  g1.tavl  ui.tavl
tests/test_render_config/materials/: mat1.json  mat1.tavl
tests/test_render_config/render_graphs/: render_graph.json  render_graph.tavl
tests/test_render_config/render_targets/: list.json  list.tavl
tests/test_render_config/resources/: res1.json  res1.tavl
tests/test_render_config/samplers/: linear.tavl  nearest.tavl
tests/test_render_config/steps/: steps1.json  steps1.tavl
tests/tile_frontier/: CMakeLists.txt  main.cpp
(+416 files in other folders)
